--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,74 @@
-#root {
-  --color-primary: ;
+:root {
+  --color-primary: #2584ff;
+  --color-secondary: #00d9ff;
+  --color-accent: #ff3400;
+  --color-body: #1b0760;
+  --color-headings: #918ca4;
+}
+
+/*links*/
+.link-arrow {
+  color: var(--color-accent);
+  text-transform: uppercase;
+  font-size: 2rem;
+  font-weight: bold;
+}
+a {
+  text-decoration: none;
+}
+.link-arrow::after {
+  content: "-->";
+  margin-left: 5px;
+  transition: margin-left 0.15s;
+}
+.link-arrow:hover::after {
+  margin-left: 10px;
+}
+
+body {
+  font-family: "Inter", sans-serif;
+  color: var(--color-body);
+  font-size: 1rem;
+  line-height: 1.5;
+  padding: 10px;
+}
+
+h1,
+h2,
+h3 {
+  font-size: 7rem;
+  color: var(--color-headings);
+  margin-bottom: 1rem;
+}
+h1 {
+  font-size: 7rem;
+}
+h2 {
+  font-size: 4rem;
+}
+h3 {
+  font-size: 3rem;
+}
+html {
+  font-size: 62.5%;
+}
+p {
+  margin-top: 0;
+}
+@media screen and (min-width: 1024px) {
+  body {
+    font-size: 1.8rem;
+  }
+
+  h1 {
+    font-size: 8rem;
+  }
+
+  h2 {
+    font-size: 4rem;
+  }
+
+  h3 {
+    font-size: 2.4rem;
+  }
 }
