--- a/CSS/style.css
+++ b/CSS/style.css
@@ -72,3 +72,47 @@ p {
     font-size: 2.4rem;
   }
 }
+
+/* badges */
+.badge {
+  border-radius: 20px;
+  padding: 0.5rem 2rem;
+  font-weight: bold;
+  white-space: nowrap;
+  font-size: 2rem;
+}
+.badge--primary {
+  background-color: var(--color-primary);
+  color: azure;
+}
+.badge--secondary {
+  background-color: var(--color-secondary);
+}
+
+.badge--small {
+  font-size: 1.6rem;
+}
+
+@media screen and (min-width: 1024px) {
+  .badge {
+    font-size: 1.2rem;
+  }
+}
+
+.icon {
+  width: 40px;
+  height: 40px;
+}
+
+.icon--primary {
+  fill: var(--color-primary);
+}
+.icon-container {
+  background-color: rgb(181, 237, 247);
+  width: 64px;
+  height: 64px;
+  border-radius: 100%;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+}
